<resources>
    <string name="app_name">Bill</string>

    <string name="total_money">¥ %s</string>

    <string name="record_func_div">÷</string>
    <string name="record_func_mul">×</string>
    <string name="record_func_sub">－</string>
    <string name="record_func_add">＋</string>
    <string name="record_func_dot">.</string>
    <string name="record_func_insert">✔</string>

    <string name="record_number_0">0</string>
    <string name="record_number_1">1</string>
    <string name="record_number_2">2</string>
    <string name="record_number_3">3</string>
    <string name="record_number_4">4</string>
    <string name="record_number_5">5</string>
    <string name="record_number_6">6</string>
    <string name="record_number_7">7</string>
    <string name="record_number_8">8</string>
    <string name="record_number_9">9</string>

</resources>